Added comment to SVG

--- a/BuildStats.Web/Views/AppVeyor/Chart.cshtml
+++ b/BuildStats.Web/Views/AppVeyor/Chart.cshtml
@@ -4,7 +4,10 @@
     Layout = null;
     var yMultiplier = 2;
 }
-
+<!--
+    This widget is provided by Dustin Moris Gorski (http://dusted.codes/).
+    Source code is open source on GitHub: https://github.com/dustinmoris/CI-BuildStats
+-->
 <svg xmlns="http://www.w3.org/2000/svg" style="shape-rendering: geometricPrecision; image-rendering: optimizeQuality; fill-rule: evenodd; clip-rule: evenodd">
     <g font-family="Helvetica,Arial,sans-serif" font-size="@Model.Config.FontSize" fill="@Model.Config.TextColorCode">
 
@@ -50,4 +53,4 @@
             }
         }
     </g>
-    </svg>
+</svg>
