--- a/BuildStats.Web/Views/AppVeyor/Chart.cshtml
+++ b/BuildStats.Web/Views/AppVeyor/Chart.cshtml
@@ -2,7 +2,7 @@
 @model BuildStats.Web.ViewModels.ChartViewModel
 @{
     Layout = null;
-    var yMultiplier = 2;
+    var yMultiplier = 1;
 }
 <!--
     This widget is provided by Dustin Moris Gorski (http://dusted.codes/).
@@ -27,30 +27,33 @@
         {
             var build = Model.Builds[i];
 
-            if (build.Status != BuildStatus.Queued && build.Status != BuildStatus.Running)
+            if (build.Status == BuildStatus.Queued || build.Status == BuildStatus.Running || build.Status == BuildStatus.Unkown)
             {
-                var x = i*(Model.Config.BarWidth + Model.Config.BarGap) + Model.Config.PaddingX;
-                var factor = build.TotalTime.TotalMilliseconds/Model.LongestBuildTime.TotalMilliseconds;
-                var height = factor*Model.Config.BarMaxHeight;
-                if (build.Status == BuildStatus.Cancelled)
-                {
-                    height = 5;
-                }
-                var y = Model.Config.BarMaxHeight + Model.Config.FontSize*yMultiplier - height + 10;
-
-                var colourCode = Model.Config.SucceededColorCode;
-
-                if (build.Status == BuildStatus.Failed)
-                {
-                    colourCode = Model.Config.FailedColorCode;
-                }
-                else if (build.Status == BuildStatus.Cancelled)
-                {
-                    colourCode = Model.Config.CancelledColorCode;
-                }
-
-                <rect id="@build.BuildId" height="@height" width="@Model.Config.BarWidth" y="@y" x="@x" stroke-width="0" fill="@colourCode"/>
+                continue;
             }
+
+            var x = i*(Model.Config.BarWidth + Model.Config.BarGap) + Model.Config.PaddingX;
+            var factor = build.TotalTime.TotalMilliseconds/Model.LongestBuildTime.TotalMilliseconds;
+            var height = factor*Model.Config.BarMaxHeight;
+            if (build.Status == BuildStatus.Cancelled)
+            {
+                height = 5;
+            }
+            var y = Model.Config.BarMaxHeight + Model.Config.FontSize*yMultiplier - height + 10;
+
+            var colourCode = Model.Config.SucceededColorCode;
+
+            if (build.Status == BuildStatus.Failed)
+            {
+                colourCode = Model.Config.FailedColorCode;
+            }
+            else {if (build.Status == BuildStatus.Cancelled)
+            {
+                colourCode = Model.Config.CancelledColorCode;
+            }
+            }
+
+            <rect id="@build.BuildId" height="@height" width="@Model.Config.BarWidth" y="@y" x="@x" stroke-width="0" fill="@colourCode"/>
         }
     </g>
 </svg>
