Fixed bug in Chart.cshtml

--- a/BuildStats.Web/Views/Shared/Chart.cshtml
+++ b/BuildStats.Web/Views/Shared/Chart.cshtml
@@ -25,7 +25,7 @@
         {
             var build = Model.Builds[i];
 
-            if (build.Status == BuildStatus.Pending || build.Status == BuildStatus.Unknown)
+            if (build.Status == BuildStatus.Unknown)
             {
                 continue;
             }
