--- a/BuildStats.Web/Views/Home/Index.cshtml
+++ b/BuildStats.Web/Views/Home/Index.cshtml
@@ -5,9 +5,10 @@
 }
 
 <!DOCTYPE html>
-
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CI BuildStats</title>
 </head>
 <body>
