Reversed the order of the bars
The latest build will be the furthest to the right now.

--- a/BuildStats.Web/Views/Shared/Chart.cshtml
+++ b/BuildStats.Web/Views/Shared/Chart.cshtml
@@ -29,7 +29,7 @@
 
         @for (var i = 0; i < Model.Builds.Count; i++)
         {
-            var build = Model.Builds[i];
+            var build = Model.Builds[Model.Builds.Count - 1 - i];
 
             if (build.Status == BuildStatus.Unknown)
             {
