--- a/BuildStats.Web/Views/Home/Index.cshtml
+++ b/BuildStats.Web/Views/Home/Index.cshtml
@@ -94,19 +94,19 @@
             <div>
                 <a href="https://www.appveyor.com/">
                     AppVeyor
-                    <img src="~/Assets/appveyor.png" />
+                    <img alt="AppVeyor" title="AppVeyor" src="~/Assets/appveyor.png" />
                 </a>
             </div>
             <div>
                 <a href="https://travis-ci.org/">
                     TravisCI
-                    <img src="~/Assets/travisci.jpeg" />
+                    <img alt="TravisCI" title="TravisCI" src="~/Assets/travisci.jpeg" />
                 </a>
             </div>
             <div>
                 <a href="https://circleci.com/">
                     CircleCI
-                    <img src="~/Assets/circleci.png" />
+                    <img alt="CircleCI" title="CircleCI" src="~/Assets/circleci.png" />
                 </a>
             </div>
         </div>
