Revert "Changed CI-BuildStats to BuildStats everywhere"
This reverts commit 0118d18da5d7fc6d93aaca1685df36b2a1aacf7c.

--- a/BuildStats.Web/Views/Shared/Chart.cshtml
+++ b/BuildStats.Web/Views/Shared/Chart.cshtml
@@ -11,8 +11,8 @@
     }
 }
 <!--
-    This widget is provided by Dustin Moris Gorski (https://dusted.codes/).
-    All source code is open source and hosted on GitHub (https://github.com/dustinmoris/BuildStats/).
+    This widget is provided by Dustin Moris Gorski (http://dusted.codes/).
+    All source code is open source and hosted on GitHub (https://github.com/dustinmoris/CI-BuildStats/).
 -->
 <svg xmlns="http://www.w3.org/2000/svg" style="shape-rendering: geometricPrecision; image-rendering: optimizeQuality; fill-rule: evenodd; clip-rule: evenodd">
     <g font-family="Helvetica,Arial,sans-serif" font-size="@Model.Config.FontSize" fill="@Model.Config.TextColorCode">
