More minor changes

--- a/BuildStats.Web/Views/Shared/Chart.cshtml
+++ b/BuildStats.Web/Views/Shared/Chart.cshtml
@@ -11,7 +11,7 @@
     }
 }
 <!--
-    This widget is provided by Dustin Moris Gorski (http://dusted.codes/).
+    This widget is provided by Dustin Moris Gorski (https://dusted.codes/).
     All source code is open source and hosted on GitHub (https://github.com/dustinmoris/CI-BuildStats/).
 -->
 <svg xmlns="http://www.w3.org/2000/svg" style="shape-rendering: geometricPrecision; image-rendering: optimizeQuality; fill-rule: evenodd; clip-rule: evenodd">
