--- a/BuildStats.Web/Views/Home/Index.cshtml
+++ b/BuildStats.Web/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
 <body>
     <main>
         <hgroup>
-            <h1>Buildstats.info</h1>
+            <h1>BuildStats.info</h1>
             <h2>SVG Widgets for AppVeyor, TravisCI and CircleCI builds</h2>
         </hgroup>
 
@@ -119,7 +119,7 @@
         <p>For more information please visit the <a href="https://github.com/dustinmoris/CI-BuildStats">official GitHub repository</a>.
         </p>
 
-        <p id="footer">This project is provided by <a href="http://dusted.codes">dusted.codes</a>.</p>
+        <p id="footer">This project is provided by <a href="https://dusted.codes">dusted.codes</a>.</p>
     </main>
 
 </body>
