Changed URLs to HTTPS

--- a/BuildStats.Web/Views/Home/Index.cshtml
+++ b/BuildStats.Web/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
 
         <h3>Build history widget</h3>
         <p>Add a build history widget to your public GitHub repository:</p>
-        <img src="http://buildstats.info/appveyor/chart/dustinmoris/ci-buildstats"
+        <img src="https://buildstats.info/appveyor/chart/dustinmoris/ci-buildstats"
              alt="Build history chart for the public buildstats.info GitHub repository"
              title="Build history chart for the public buildstats.info GitHub repository" />
 
