Replaced down arrow with smaller version

--- a/BuildStats.Web/Views/NuGet/Info.cshtml
+++ b/BuildStats.Web/Views/NuGet/Info.cshtml
@@ -32,6 +32,6 @@
         <text x="@(x + 7)" y="@(y + 14)" fill="#ffffff">NuGet</text>
         <text x="@(x + nugetTextWidth + 7)" y="@(y + 14)" fill="#ffffff">v</text>
         <text x="@(x + nugetTextWidth + 15)" y="@(y + 14)" fill="#ffffff">@Model.Version</text>
-        <text x="@(x + nugetTextWidth + versionWidth + 7)" y="@(y + 14)" fill="#ffffff">▼ @downloads</text>
+        <text x="@(x + nugetTextWidth + versionWidth + 7)" y="@(y + 14)" fill="#ffffff">▾ @downloads</text>
     </g>
 </svg>
