--- a/BuildStats.Web/Views/NuGet/Info.cshtml
+++ b/BuildStats.Web/Views/NuGet/Info.cshtml
@@ -7,37 +7,46 @@
 
     const int x = 0;
     const int y = 0;
-    const int titleWidth = 50;
+    const int padding = 5;
     const string titleText = "nuget";
 
+    var version = $"v{package.Version}";
+    var downloads = $"▾ {Model.GetDownloadsText()}";
     var badgeHeight = config.BadgeHeight;
     var cornerRadius = config.BadgeCornerRadius;
-
-    var downloads = package.Downloads >= 1000000
-        ? $"{Math.Round((double)package.Downloads/ 1000000, 2)}m"
-        : (
-            package.Downloads >= 1000
-                ? $"{Math.Round((double)package.Downloads/1000, 1)}k"
-                : package.Downloads.ToString());
-
-    var versionWidth = package.Version.Length * 7 + 15;
-    var downloadsWidth = downloads.Length * 7 + 28;
+    var fontSizeToMeasure = config.FontSize - 3;
+    var titleWidth = Model.MeasureTextWidth(titleText, fontSizeToMeasure) + padding * 2;
+    var versionWidth = Model.MeasureTextWidth(version, fontSizeToMeasure) + padding * 2;
+    var downloadsWidth = Model.MeasureTextWidth(downloads, fontSizeToMeasure) + padding * 2;
     var totalWidth = titleWidth + versionWidth + downloadsWidth;
 }
 <!--
     This widget is provided by Dustin Moris Gorski (https://dusted.codes/).
     All source code is open source and hosted on GitHub (https://github.com/dustinmoris/CI-BuildStats/).
 -->
-<svg xmlns="http://www.w3.org/2000/svg" style="shape-rendering: geometricPrecision; image-rendering: optimizeQuality; fill-rule: evenodd; clip-rule: evenodd" width="@(totalWidth + 5)" height="@badgeHeight">
+<svg xmlns="http://www.w3.org/2000/svg"
+     style="shape-rendering: geometricPrecision;
+            image-rendering: optimizeQuality; 
+            fill-rule: evenodd; 
+            clip-rule: evenodd"
+     width="@(totalWidth)" 
+     height="@badgeHeight">
     <g font-family="@config.FontFamily" font-size="@config.FontSize" fill="@config.FontColour">
-        <rect x="@x" y="@y" height="@badgeHeight" width="@totalWidth" rx="@cornerRadius" ry="@cornerRadius" stroke-width="0" fill="@config.BackgroundColourTitle" />
-        <rect x="@(x + titleWidth)" y="@y" height="@badgeHeight" width="@versionWidth" stroke-width="0" fill="@config.BackgroundColourVersion" />
-        <rect x="@(x + titleWidth + versionWidth)" y="@y" height="@badgeHeight" width="@downloadsWidth" stroke-width="0" fill="@config.BackgroundColourDownloads" />
-        <rect x="@(x + totalWidth - 5)" y="@y" height="@badgeHeight" width="10" stroke-width="0" rx="@cornerRadius" ry="@cornerRadius" fill="@config.BackgroundColourDownloads" />
+        <defs>
+            <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
+                <stop offset="0%" style="stop-color: rgb(255, 255, 255); stop-opacity: 0.3"/>
+                <stop offset="100%" style="stop-color: rgb(255, 255, 255); stop-opacity: 0" />
+            </linearGradient>
+        </defs>
 
-        <text x="@(x + 7)" y="@(y + 14)" fill="#ffffff">@titleText</text>
-        <text x="@(x + titleWidth + 7)" y="@(y + 14)" fill="#ffffff">v</text>
-        <text x="@(x + titleWidth + 15)" y="@(y + 14)" fill="#ffffff">@package.Version</text>
-        <text x="@(x + titleWidth + versionWidth + 7)" y="@(y + 14)" fill="#ffffff">▾ @downloads</text>
+        <rect x="@x" y="@y" height="@badgeHeight" width="@(totalWidth - 50)" rx="@cornerRadius" ry="@cornerRadius" stroke-width="0" fill="@config.BackgroundColourTitle"/>
+        <rect x="@(x + titleWidth)" y="@y" height="@badgeHeight" width="@versionWidth" stroke-width="0" fill="@config.BackgroundColourVersion"/>
+        <rect x="@(x + titleWidth + versionWidth)" y="@y" height="@badgeHeight" width="@(downloadsWidth - 10)" stroke-width="0" fill="@config.BackgroundColourDownloads"/>
+        <rect x="@(x + titleWidth + versionWidth)" y="@y" height="@badgeHeight" width="@downloadsWidth" rx="@cornerRadius" ry="@cornerRadius" stroke-width="0" fill="@config.BackgroundColourDownloads" />
+        <rect x="@x" y="@y" height="@badgeHeight" width="@(totalWidth)" rx="@cornerRadius" ry="@cornerRadius" stroke-width="0" fill="url(#grad1)" />
+
+        <text x="@(x + padding + 2)" y="@(y + 14)" fill="#ffffff">@titleText</text>
+        <text x="@(x + titleWidth + padding + 2)" y="@(y + 14)" fill="#ffffff">@version</text>
+        <text x="@(x + titleWidth + versionWidth + padding)" y="@(y + 14)" fill="#ffffff">@downloads</text>
     </g>
 </svg>
