WIP: Adding MyGet support for the package badge

--- a/BuildStats.Web/Views/Shared/Chart.cshtml
+++ b/BuildStats.Web/Views/Shared/Chart.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BuildStats.Core
+@using BuildStats.Core.BuildHistoryChart
 @model BuildStats.Web.ViewModels.ChartViewModel
 @{
     Layout = null;
