Added optional flag for NuGet badges to include pre-release packages

--- a/BuildStats.Web/Views/Tests/NuGet.cshtml
+++ b/BuildStats.Web/Views/Tests/NuGet.cshtml
@@ -23,7 +23,9 @@
 <body>
     <main>
         <h1>Buildstats.info - Tests</h1>
-		
+
+        <h3>Default</h3>
+
         <h5>Lanem</h5>
         <img src="~/nuget/lanem"/>
 
@@ -49,7 +51,12 @@
         <img src="~/nuget/microsoft.aspnet.mvc" />
 
         <h5>EntityFramework</h5>
-        <img src="~/nuget/entityframework" />
+        <img src="~/nuget/entityframework"/>
+
+        <h3>Include PreReleases</h3>
+
+        <h5>NServiceBus.PostgreSQL</h5>
+        <img src="~/nuget/NServiceBus.PostgreSQL?includePreReleases=true"/>
     </main>
 </body>
 </html>
