Continued on migrating the BuildHistoryView to a liquid template

--- a/BuildStats.Suave/Package.liquid
+++ b/BuildStats.Suave/Package.liquid
@@ -1,5 +1,5 @@
 ﻿<!--
-    This widget is provided by Dustin Moris Gorski (https://dusted.codes/).
+    This SVG badge is provided by Dustin Moris Gorski (https://dusted.codes/).
     All source code is open source and hosted on GitHub (https://github.com/dustinmoris/CI-BuildStats/).
 -->
 <svg xmlns="http://www.w3.org/2000/svg"
