--- a/BuildStats.Suave/Package.liquid
+++ b/BuildStats.Suave/Package.liquid
@@ -25,6 +25,6 @@
 
         <text x="{{ model.x | plus: model.padding | plus: 2 }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.feed }}</text>
         <text x="{{ model.x | plus: model.feed_width | plus: model.padding | plus: 2 }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.version }}</text>
-        <text x="{{ model.x | plus: model.feed_width | plus: model.version_width | plus: model.padding | plus: 2 }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.downloads }}</text>
+        <text x="{{ model.x | plus: model.feed_width | plus: model.version_width | plus: model.padding }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.downloads }}</text>
     </g>
 </svg>
