Switched to better text measuring method in Mono

--- a/BuildStats.Suave/Package.liquid
+++ b/BuildStats.Suave/Package.liquid
@@ -21,10 +21,10 @@
         <rect x="{{ model.x | plus: model.feed_width }}" y="{{ model.y }}" height="{{ model.total_height }}" width="{{ model.version_width }}" stroke-width="0" fill="{{ model.version_bg_colour }}" />
         <rect x="{{ model.x | plus: model.feed_width | plus: model.version_width }}" y="{{ model.y }}" height="{{ model.total_height }}" width="{{ model.downloads_width | minus: 10 }}" stroke-width="0" fill="{{ model.downloads_bg_colour }}" />
         <rect x="{{ model.x | plus: model.feed_width | plus: model.version_width }}" y="{{ model.y }}" height="{{ model.total_height }}" width="{{ model.downloads_width }}" rx="{{ model.corner_radius }}" ry="{{ model.corner_radius }}" stroke-width="0" fill="{{ model.downloads_bg_colour }}" />
-        <rect x="0" y="{{ model.y }}" height="{{ model.total_height }}" width="{{ model.total_width }}" rx="{{ model.corner_radius }}" ry="{{ model.corner_radius }}" stroke-width="0" fill="url(#grad1)" />
+        <rect x="{{ model.x }}" y="{{ model.y }}" height="{{ model.total_height }}" width="{{ model.total_width }}" rx="{{ model.corner_radius }}" ry="{{ model.corner_radius }}" stroke-width="0" fill="url(#grad1)" />
 
-        <text x="{{ model.x | plus: model.padding | plus: 1 }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.feed }}</text>
-        <text x="{{ model.x | plus: model.feed_width | plus: model.padding | plus: 1 }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.version }}</text>
+        <text x="{{ model.x | plus: model.padding }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.feed }}</text>
+        <text x="{{ model.x | plus: model.feed_width | plus: model.padding }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.version }}</text>
         <text x="{{ model.x | plus: model.feed_width | plus: model.version_width | plus: model.padding }}" y="{{ model.y | plus: 14 }}" fill="#ffffff">{{ model.downloads }}</text>
     </g>
 </svg>
